--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body style="background-color:black ;">
 
       <div class="d-flex flex-column mb-3">
-        <div class="p-2"><img src="pics/Ar/shisha menu .png" alt="" class="img-fluid" width=100% height="100%"></div>
+        <div class="p-2"><img src="pics/Ar/shisha menu .jpg" alt="" class="img-fluid" width=100% height="100%"></div>
       
       
       </div>
